# obce

./: .babelrc  .gitignore  Cargo.toml  README.md  flake.nix  package.json  tsconfig.json  typechain-compiler-config.json
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: definition.rs  error.rs  extension.rs  hash.rs  implementation.rs  lib.rs  mock.rs  types.rs  utils.rs
examples/rand-extension/: Cargo.toml  README.md  lib.rs
examples/rand-extension/chain-extension/: Cargo.toml
examples/rand-extension/chain-extension/src/: ink.rs  lib.rs  substrate.rs
macro/: Cargo.toml
macro/src/: lib.rs
src/: codegen.rs  lib.rs
src/ink_lang/: mod.rs
src/substrate/: environment.rs  is_critical_error.rs  mod.rs
tests/: environment.rs  error.rs  mock.rs  ui.rs
tests/e2e/: helpers.ts  tests.ts
tests/e2e/contract/: Cargo.toml  lib.rs
tests/ui/: ink.rs  substrate.rs
tests/ui/definition/: const_eq.rs  fail_default_method.rs  fail_default_method.stderr  fail_incorrect_id.stderr  fail_invalid_int.stderr  fail_invalid_items.stderr  pass_with_named_method.rs  pass_without_id.rs
tests/ui/error/: fail_multiple_critical.rs  fail_multiple_critical.stderr  pass_generics.rs  pass_simple.rs
tests/ui/implementation/: fail_incorrect_weight_call.rs  fail_incorrect_weight_call.stderr  fail_incorrect_weight_path.rs  fail_incorrect_weight_path.stderr  fail_missing_bounds.rs  fail_missing_bounds.stderr  fail_missing_generics.rs  fail_missing_generics.stderr  fail_random_trait.stderr  fail_weight_missing_args.rs  fail_weight_missing_args.stderr  fail_weight_without_dispatch.rs  fail_weight_without_dispatch.stderr  pass_complex_method.rs  pass_empty.rs  pass_simple.rs  pass_weight.rs  pass_weight_with_args.rs  test_pallet.rs
tests/ui/ink/mock/: fail_incorrect_inputs.rs  fail_incorrect_inputs.stderr  fail_incorrect_output.rs  fail_incorrect_output.stderr  fail_missing_self.rs  fail_missing_self.stderr  fail_nonexistent_method.rs  fail_nonexistent_method.stderr  fail_random_trait.rs  fail_random_trait.stderr  fail_without_trait.rs  fail_without_trait.stderr  pass_empty.rs  pass_multiple_args.rs  pass_simple.rs  pass_with_args.rs
tests/ui/substrate/definition/: fail_default_method.stderr  fail_duplicated_ids.rs  fail_duplicated_ids.stderr  fail_incorrect_id.rs  fail_incorrect_id.stderr  fail_invalid_int.rs  fail_invalid_int.stderr  fail_invalid_items.rs  fail_invalid_items.stderr  pass_with_method.rs  pass_with_multiple_methods.rs  pass_with_name_id.rs  pass_with_named_method.rs  pass_with_number_id.rs  pass_with_numbered_method.rs  pass_without_id.rs
tests/ui/substrate/error/: fail_duplicated_ret_val.rs  fail_duplicated_ret_val.stderr  fail_enforced_ret_val.stderr  fail_multiple_critical.stderr  pass_critical.rs  pass_with_enforced_ret_val.rs  pass_with_relaxed_ret_val.rs  pass_with_ret_val.rs  pass_with_values.rs
tests/ui/substrate/implementation/: fail_incorrect_weight_call.rs  fail_incorrect_weight_call.stderr  fail_incorrect_weight_path.rs  fail_incorrect_weight_path.stderr  fail_missing_generics.stderr  fail_random_trait.rs  fail_random_trait.stderr  fail_weight_missing_args.rs  fail_weight_missing_args.stderr  fail_weight_without_dispatch.rs  fail_weight_without_dispatch.stderr  pass_complex_method.rs  pass_dispatch_weight.rs  pass_empty.rs  pass_empty_weight.rs  pass_expr_weight.rs  pass_simple.rs  pass_weight_expr_with_vars.rs  pass_weight_with_args.rs  pass_weight_with_pre_charge.rs  pass_weight_with_vars.rs  pass_with_ret_val.rs  test_pallet.rs
