[workspace]
members = [
    "codegen",
    "macro",
]

[package]
name = "obce"
version = "0.1.0"
authors = ["727.Ventures <green.baneling@727.ventures>"]
edition = "2021"

license = "MIT"
repository = "TODO:"
documentation = "TODO:"
homepage = "https://727.ventures"
description = "OpenBursh chain extension(OBCE) - util to simplify chain extension development."
keywords = ["wasm", "727.ventures", "smart-contracts", "blockchain", "chain-extension"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
# Common deps
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }
obce-macro = { path = "macro", default-features = false }

# Substrate deps
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, optional = true }

# Ink deps
ink = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false, optional = true }
ink_engine = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false, optional = true }

[dev-dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, features = ["std"] }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.34", default-features = false, features = ["std"] }
ink = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false, features = ["std"] }
trybuild = "1.0"

[features]
default = ["std"]
substrate = [
    "pallet-contracts",
    "frame-system",
    "frame-support",
    "sp-core",
    "sp-runtime",
    "sp-std",
]
ink = [
    "dep:ink",
]
std = [
    "scale-info/std",
    "scale/std",
]
substrate-std = [
    "std",
    "substrate",
    "pallet-contracts/std",
    "frame-system/std",
    "frame-support/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
]
ink-std = [
    "std",
    "ink",
    "ink/std",
    "ink_engine/std"
]
runtime-benchmarks = [
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "pallet-contracts/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

[[test]]
name = "error-macro"
path = "tests/error.rs"
required-features = ["substrate-std"]

[[test]]
name = "mock-macro"
path = "tests/mock.rs"
required-features = ["ink-std"]

[[test]]
name = "substrate-ui"
path = "tests/ui/substrate.rs"
required-features = ["substrate-std"]

[[test]]
name = "ink-ui"
path = "tests/ui/ink.rs"
required-features = ["ink-std"]
