[package]
name = "rand-extension"
edition = "2021"
version = "0.1.0"

[dependencies]
obce = { git = "https://github.com/727-Ventures/obce", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

ink = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false, optional = true }
ink_primitives = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false, optional = true }
ink_metadata = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false, features = ["derive"], optional = true }
ink_storage = { git = "https://github.com/paritytech/ink", rev = "4655a8b4413cb50cbc38d1b7c173ad426ab06cde", default-features = false, optional = true }

pallet-randomness-collective-flip = { git = "https://github.com/paritytech/prosopo", default-features = false, branch = "polkadot-v0.9.37-debug", optional = true }

[features]
default = ["std"]
substrate = [
    "obce/substrate",
    "pallet-randomness-collective-flip"
]
ink = [
    "obce/ink",
    "dep:ink",
    "ink_primitives",
    "ink_storage",
]
std = [
    "scale-info/std",
    "scale/std",
    "obce/std"
]
substrate-std = [
    "std",
    "substrate",
    "obce/substrate-std",
    "pallet-randomness-collective-flip/std"
]
ink-std = [
    "std",
    "ink",
    "obce/ink-std",
    "ink_primitives/std",
    "ink_storage/std",
    "ink_metadata",
    "ink_metadata/std",
]
