[package]
name = "contract"
edition = "2021"
version = "0.1.0"
authors = ["name <email>"]

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

ink = { version = "4.0.0-rc", default-features = false }
ink_primitives = { version = "4.0.0-rc", default-features = false }
ink_metadata = { version = "4.0.0-rc", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "4.0.0-rc", default-features = false }
ink_storage = { version = "4.0.0-rc", default-features = false }

openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false }
chain-extension = { path = "../../../obce-test-environment/chain-extension", default-features = false, features = ["ink"] }

[lib]
name = "contract"
path = "lib.rs"
crate-type = [
	"cdylib"
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "chain-extension/ink-std",
]
ink-as-dependency = []
